--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "react-penrose-menu",
   "version": "0.0.0",
-  "private": false,
   "description": "Endless Menu for React.",
   "keywords": [
     "javascript",
@@ -31,8 +30,8 @@
   ],
   "scripts": {
     "dev": "node ./src/index.js",
-    "build": "echo \"No build script specified\"",
-    "start": "echo \"No start script specified\"",
+    "start": "parcel",
+    "build": "parcel build",
     "lint": "yarn lint:js && yarn lint:prettier",
     "lint:js": "eslint --ext \".js,.jsx,.mjs,.cjs,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check --ignore-path .gitignore .",
@@ -63,6 +62,8 @@
     "eslint-plugin-unicorn": "^43.0.2",
     "husky": "^8.0.1",
     "jest": "^29.0.2",
-    "prettier": "^2.7.1"
+    "parcel": "^2.7.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.8.3"
   }
 }
