--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,13 @@
     "node": true,
     "jest/globals": true
   },
-  "parser": "@babel/eslint-parser",
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "requireConfigFile": true,
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 2018,
+    "project": "./tsconfig.json",
     "sourceType": "module"
   },
   "extends": [
@@ -21,10 +25,11 @@
   "ignorePatterns": [],
   "plugins": ["@babel", "no-only-tests", "no-secrets"],
   "rules": {
-    "import/extensions": ["error", "ignorePackages"],
+    "import/extensions": [false, "ignorePackages"],
     "import/prefer-default-export": "off",
     "no-only-tests/no-only-tests": "error",
     "no-secrets/no-secrets": "error",
-    "unicorn/no-array-for-each": "off"
+    "unicorn/no-array-for-each": "off",
+    "import/no-unresolved": "off"
   }
 }
