--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "url": "https://digitalcampus360.de/"
   },
   "type": "module",
-  "main": "src/index.js",
+  "source": "src/index.tsx",
   "module": "src/index.js",
   "files": [
     "src"
   ],
   "scripts": {
     "dev": "node ./src/index.js",
-    "start": "parcel",
+    "start": "parcel src/index.html --open",
     "build": "parcel build",
     "lint": "yarn lint:js && yarn lint:prettier",
     "lint:js": "eslint --ext \".js,.jsx,.mjs,.cjs,.vue\" --ignore-path .gitignore .",
@@ -43,12 +43,14 @@
     "@babel/core": "^7.19.0",
     "@babel/eslint-parser": "^7.16.3",
     "@babel/eslint-plugin": "^7.18.10",
-    "@babel/preset-env": "^7.19.0",
+    "@babel/preset-react": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/jest": "^29.0.0",
+    "@types/react": "^18.0.19",
+    "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^29.0.2",
-    "eslint": "^8.23.0",
+    "eslint": "8.22.0",
     "eslint-config-airbnb-babel": "^0.2.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
@@ -63,7 +65,11 @@
     "husky": "^8.0.1",
     "jest": "^29.0.2",
     "parcel": "^2.7.0",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^2.7.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "react": "^18.2.0"
   }
 }
