--- a/package.json
+++ b/package.json
@@ -40,21 +40,15 @@
     "test": "jest --coverage"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/eslint-parser": "^7.16.3",
-    "@babel/eslint-plugin": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@types/jest": "^29.0.0",
     "@types/react": "^18.0.19",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/parser": "^5.37.0",
-    "babel-jest": "^29.0.2",
     "eslint": "8.22.0",
-    "eslint-config-airbnb-babel": "^0.2.2",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "^27.0.1",
     "eslint-plugin-no-only-tests": "^3.0.0",
@@ -70,6 +64,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
