--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/jest": "^29.0.0",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/parser": "^5.37.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -64,7 +65,9 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^5.3.6"
   }
 }
